# SmartSigma

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  instructions.md  newfeature.md  pyproject.toml  ref.md  requirements.txt  rules.md  setup.bat
