[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartsigma"
version = "1.0.0"
description = "A Portfolio Optimization Web App using HRP and MVO methods"
readme = "README.md"
authors = [
    { name = "SmartSigma Team" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["portfolio", "optimization", "finance", "investment", "HRP", "MVO"]
dependencies = [
    "streamlit>=1.29.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "PyPortfolioOpt==1.5.2",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.9",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=smartsigma"
testpaths = [
    "tests",
]
